--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,45 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    margin: 0px;
+    padding: 0px;    
+}
+
+body {
+    background-color: black;
+    /* background-color: rgba(155, 190, 246, 0.5) ; */
+}
+
+/* .fit-image{
+    width: 100%;
+    height: 100vh;
+} */
+/* .img{
+    background-image: url(./assets/garrett_edit.jpg);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+} */
+
+.circle{
+    height: 70px;
+    width: 70px;
+    background-color: rgb(244, 226, 224);
+    color: black;
+    padding: 12px;
+    /* font-size: 30px; */
+    /* display: inline-block; */
+    border-radius: 50%;
+    margin-bottom: 15px;
+}
+.circle:hover{
+    background-color: black;
+    color: hsl(0, 0%, 96%);
+    transition: .7s ;
+}
+
+.contact-links {
+    text-decoration: underline;
+}
